// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`broken attribute description comments 1`] = `
"// https://registry.terraform.io/providers/hashicorp/google/latest/docs/resources/description_escaping
// generated from terraform resource schema

import { Construct } from 'constructs';
import * as cdktf from 'cdktf';

// Configuration

export interface DescriptionEscapingConfig extends cdktf.TerraformMetaArguments {
  /**
  * The resource name of the Cloud KMS CryptoKey to be used to protect access 
  *  to messages published on this topic. Your project's PubSub service account 
  *  ('service-{{PROJECT_NUMBER}}@gcp-sa-pubsub.iam.gserviceaccount.com') must have 
  *  'roles/cloudkms.cryptoKeyEncrypterDecrypter' to use this feature. 
  *  The expected format is 'projects/* /locations/* /keyRings/* /cryptoKeys/*'
  *
  * Docs at Terraform Registry: {@link https://registry.terraform.io/providers/hashicorp/google/latest/docs/resources/description_escaping#broken_comments DescriptionEscaping#broken_comments}
   *
  * Note: The above comment contained a comment block ending sequence (* followed by /). We have introduced a space between to prevent syntax errors. Please ignore the space.
  */
  readonly brokenComments: boolean | cdktf.IResolvable;
}

/**
* Represents a {@link https://registry.terraform.io/providers/hashicorp/google/latest/docs/resources/description_escaping description_escaping}
*/
export class DescriptionEscaping extends cdktf.TerraformResource {

  // =================
  // STATIC PROPERTIES
  // =================
  public static readonly tfResourceType = "description_escaping";

  // ==============
  // STATIC Methods
  // ==============
  /**
  * Generates CDKTF code for importing a DescriptionEscaping resource upon running "cdktf plan <stack-name>"
  * @param scope The scope in which to define this construct
  * @param importToId The construct id used in the generated config for the DescriptionEscaping to import
  * @param importFromId The id of the existing DescriptionEscaping that should be imported. Refer to the {@link https://registry.terraform.io/providers/hashicorp/google/latest/docs/resources/description_escaping#import import section} in the documentation of this resource for the id to use
  * @param provider? Optional instance of the provider where the DescriptionEscaping to import is found
  */
  public static generateConfigForImport(scope: Construct, importToId: string, importFromId: string, provider?: cdktf.TerraformProvider) {
        return new cdktf.ImportableResource(scope, importToId, { terraformResourceType: "description_escaping", importId: importFromId, provider });
      }

  // ===========
  // INITIALIZER
  // ===========

  /**
  * Create a new {@link https://registry.terraform.io/providers/hashicorp/google/latest/docs/resources/description_escaping description_escaping} Resource
  *
  * @param scope The scope in which to define this construct
  * @param id The scoped construct ID. Must be unique amongst siblings in the same scope
  * @param options DescriptionEscapingConfig
  */
  public constructor(scope: Construct, id: string, config: DescriptionEscapingConfig) {
    super(scope, id, {
      terraformResourceType: 'description_escaping',
      terraformGeneratorMetadata: {
        providerName: 'google'
      },
      provider: config.provider,
      dependsOn: config.dependsOn,
      count: config.count,
      lifecycle: config.lifecycle,
      provisioners: config.provisioners,
      connection: config.connection,
      forEach: config.forEach
    });
    this._brokenComments = config.brokenComments;
  }

  // ==========
  // ATTRIBUTES
  // ==========

  // broken_comments - computed: false, optional: false, required: true
  private _brokenComments?: boolean | cdktf.IResolvable; 
  public get brokenComments() {
    return this.getBooleanAttribute('broken_comments');
  }
  public set brokenComments(value: boolean | cdktf.IResolvable) {
    this._brokenComments = value;
  }
  // Temporarily expose input value. Use with caution.
  public get brokenCommentsInput() {
    return this._brokenComments;
  }

  // =========
  // SYNTHESIS
  // =========

  protected synthesizeAttributes(): { [name: string]: any } {
    return {
      broken_comments: cdktf.booleanToTerraform(this._brokenComments),
    };
  }

  protected synthesizeHclAttributes(): { [name: string]: any } {
    const attrs = {
      broken_comments: {
        value: cdktf.booleanToHclTerraform(this._brokenComments),
        isBlock: false,
        type: "simple",
        storageClassType: "boolean",
      },
    };

    // remove undefined attributes
    return Object.fromEntries(Object.entries(attrs).filter(([_, value]) => value !== undefined && value.value !== undefined ))
  }
}
"
`;

exports[`comment ending sequence in comment 1`] = `
"// https://registry.terraform.io/providers/hashicorp/aws/latest/docs/resources/code_blocks
// generated from terraform resource schema

import { Construct } from 'constructs';
import * as cdktf from 'cdktf';

// Configuration

export interface CodeBlocksConfig extends cdktf.TerraformMetaArguments {
  /**
  * Ending a comment early by including a * / is a problem.
  *
  * Docs at Terraform Registry: {@link https://registry.terraform.io/providers/hashicorp/aws/latest/docs/resources/code_blocks#with_code_block CodeBlocks#with_code_block}
   *
  * Note: The above comment contained a comment block ending sequence (* followed by /). We have introduced a space between to prevent syntax errors. Please ignore the space.
  */
  readonly withCodeBlock: boolean | cdktf.IResolvable;
}

/**
* Represents a {@link https://registry.terraform.io/providers/hashicorp/aws/latest/docs/resources/code_blocks code_blocks}
*/
export class CodeBlocks extends cdktf.TerraformResource {

  // =================
  // STATIC PROPERTIES
  // =================
  public static readonly tfResourceType = "code_blocks";

  // ==============
  // STATIC Methods
  // ==============
  /**
  * Generates CDKTF code for importing a CodeBlocks resource upon running "cdktf plan <stack-name>"
  * @param scope The scope in which to define this construct
  * @param importToId The construct id used in the generated config for the CodeBlocks to import
  * @param importFromId The id of the existing CodeBlocks that should be imported. Refer to the {@link https://registry.terraform.io/providers/hashicorp/aws/latest/docs/resources/code_blocks#import import section} in the documentation of this resource for the id to use
  * @param provider? Optional instance of the provider where the CodeBlocks to import is found
  */
  public static generateConfigForImport(scope: Construct, importToId: string, importFromId: string, provider?: cdktf.TerraformProvider) {
        return new cdktf.ImportableResource(scope, importToId, { terraformResourceType: "code_blocks", importId: importFromId, provider });
      }

  // ===========
  // INITIALIZER
  // ===========

  /**
  * Create a new {@link https://registry.terraform.io/providers/hashicorp/aws/latest/docs/resources/code_blocks code_blocks} Resource
  *
  * @param scope The scope in which to define this construct
  * @param id The scoped construct ID. Must be unique amongst siblings in the same scope
  * @param options CodeBlocksConfig
  */
  public constructor(scope: Construct, id: string, config: CodeBlocksConfig) {
    super(scope, id, {
      terraformResourceType: 'code_blocks',
      terraformGeneratorMetadata: {
        providerName: 'aws'
      },
      provider: config.provider,
      dependsOn: config.dependsOn,
      count: config.count,
      lifecycle: config.lifecycle,
      provisioners: config.provisioners,
      connection: config.connection,
      forEach: config.forEach
    });
    this._withCodeBlock = config.withCodeBlock;
  }

  // ==========
  // ATTRIBUTES
  // ==========

  // with_code_block - computed: false, optional: false, required: true
  private _withCodeBlock?: boolean | cdktf.IResolvable; 
  public get withCodeBlock() {
    return this.getBooleanAttribute('with_code_block');
  }
  public set withCodeBlock(value: boolean | cdktf.IResolvable) {
    this._withCodeBlock = value;
  }
  // Temporarily expose input value. Use with caution.
  public get withCodeBlockInput() {
    return this._withCodeBlock;
  }

  // =========
  // SYNTHESIS
  // =========

  protected synthesizeAttributes(): { [name: string]: any } {
    return {
      with_code_block: cdktf.booleanToTerraform(this._withCodeBlock),
    };
  }

  protected synthesizeHclAttributes(): { [name: string]: any } {
    const attrs = {
      with_code_block: {
        value: cdktf.booleanToHclTerraform(this._withCodeBlock),
        isBlock: false,
        type: "simple",
        storageClassType: "boolean",
      },
    };

    // remove undefined attributes
    return Object.fromEntries(Object.entries(attrs).filter(([_, value]) => value !== undefined && value.value !== undefined ))
  }
}
"
`;

exports[`malformed code blocks which break in python rst 1`] = `
"// https://registry.terraform.io/providers/hashicorp/aws/latest/docs/resources/code_blocks
// generated from terraform resource schema

import { Construct } from 'constructs';
import * as cdktf from 'cdktf';

// Configuration

export interface CodeBlocksConfig extends cdktf.TerraformMetaArguments {
  /**
  * Here comes a code block \`\`\`foo.bar\`\`\` and here is more text.
  *
  * Docs at Terraform Registry: {@link https://registry.terraform.io/providers/hashicorp/aws/latest/docs/resources/code_blocks#with_code_block CodeBlocks#with_code_block}
  */
  readonly withCodeBlock: boolean | cdktf.IResolvable;
}

/**
* Represents a {@link https://registry.terraform.io/providers/hashicorp/aws/latest/docs/resources/code_blocks code_blocks}
*/
export class CodeBlocks extends cdktf.TerraformResource {

  // =================
  // STATIC PROPERTIES
  // =================
  public static readonly tfResourceType = "code_blocks";

  // ==============
  // STATIC Methods
  // ==============
  /**
  * Generates CDKTF code for importing a CodeBlocks resource upon running "cdktf plan <stack-name>"
  * @param scope The scope in which to define this construct
  * @param importToId The construct id used in the generated config for the CodeBlocks to import
  * @param importFromId The id of the existing CodeBlocks that should be imported. Refer to the {@link https://registry.terraform.io/providers/hashicorp/aws/latest/docs/resources/code_blocks#import import section} in the documentation of this resource for the id to use
  * @param provider? Optional instance of the provider where the CodeBlocks to import is found
  */
  public static generateConfigForImport(scope: Construct, importToId: string, importFromId: string, provider?: cdktf.TerraformProvider) {
        return new cdktf.ImportableResource(scope, importToId, { terraformResourceType: "code_blocks", importId: importFromId, provider });
      }

  // ===========
  // INITIALIZER
  // ===========

  /**
  * Create a new {@link https://registry.terraform.io/providers/hashicorp/aws/latest/docs/resources/code_blocks code_blocks} Resource
  *
  * @param scope The scope in which to define this construct
  * @param id The scoped construct ID. Must be unique amongst siblings in the same scope
  * @param options CodeBlocksConfig
  */
  public constructor(scope: Construct, id: string, config: CodeBlocksConfig) {
    super(scope, id, {
      terraformResourceType: 'code_blocks',
      terraformGeneratorMetadata: {
        providerName: 'aws'
      },
      provider: config.provider,
      dependsOn: config.dependsOn,
      count: config.count,
      lifecycle: config.lifecycle,
      provisioners: config.provisioners,
      connection: config.connection,
      forEach: config.forEach
    });
    this._withCodeBlock = config.withCodeBlock;
  }

  // ==========
  // ATTRIBUTES
  // ==========

  // with_code_block - computed: false, optional: false, required: true
  private _withCodeBlock?: boolean | cdktf.IResolvable; 
  public get withCodeBlock() {
    return this.getBooleanAttribute('with_code_block');
  }
  public set withCodeBlock(value: boolean | cdktf.IResolvable) {
    this._withCodeBlock = value;
  }
  // Temporarily expose input value. Use with caution.
  public get withCodeBlockInput() {
    return this._withCodeBlock;
  }

  // =========
  // SYNTHESIS
  // =========

  protected synthesizeAttributes(): { [name: string]: any } {
    return {
      with_code_block: cdktf.booleanToTerraform(this._withCodeBlock),
    };
  }

  protected synthesizeHclAttributes(): { [name: string]: any } {
    const attrs = {
      with_code_block: {
        value: cdktf.booleanToHclTerraform(this._withCodeBlock),
        isBlock: false,
        type: "simple",
        storageClassType: "boolean",
      },
    };

    // remove undefined attributes
    return Object.fromEntries(Object.entries(attrs).filter(([_, value]) => value !== undefined && value.value !== undefined ))
  }
}
"
`;
